<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KUSTM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonEnter">ENTER</string>
    <string name="title">Know UST More!!!</string>
    <string name="titleInstruct">Hit ENTER to Begin</string>
    <string name="sebtitle">Pick a Topic</string>
    <string name="Top1">Topic 1</string>
    <string name="Top2">Topic 2</string>
    <string name="Top3">Topic 3</string>
    <string name="Top4">Topic 4</string>
    <string name="Title2">Know UST More!!!</string>
    <string name="sebtitle2">Select an Article</string>
    <string name="btnArticle1">Article Title 1</string>
    <string name="btnArticle2">Article Title 2</string>
    <string name="btnArticle3">Article Title 3</string>
    <string name="btnArticle4">Article Title 4</string>
    <string name="articleTitle1">Article Title</string>
    <string name="artcleText">Article Text</string>


</resources>
